tests/pass/files/proj6_man_pass_simple-mult-dim-array.c
int main () {
    int a[2][3];
    a[0][0] = 1;

    char b[2][3] = {{'a', 'b', 'c'}, {'d', 'e', 'f'}};
    b[0][0] = 'z';

}