tests/semantic_errors/files/proj_7_struct_invalid_constructor_1.c
struct A {
    int num;
};

int main() {
    struct A a = {{1, 2, 3}};
    return 0;
}